<resources>
    <string name="app_name">LoginExemplo</string>
    <string name="entrar">Entrar</string>
    <string name="criaconta">Criar Conta</string>
    <string name="cadastro">Cadastre-se</string>
    <string name="voltar">Voltar</string>

    <string name="DataEvento">
        Data Inicial: xxxx
        \nData Final: xxxx
        \nHora Inicial: xxxx
        \nHora Final: xxxx
        \nO evento tera duração de xx dias e xxx horas
    </string>
    <string name="localEvento">
        Rua xxxxxx n° xxxx
        \nBairro XXXXX
        \nCidade XXXXX
        \nEstado XXXXX - UF: XXXXXXX
    </string>


    <string name="email_obrigatorio">E-mail é obrigatório</string>
    <string name="email_invalido">E-mail inválido</string>
    <string name="senha_obrigatoria">Senha é obrigatória</string>
    <string name="senha_deve_ter_pelo_menos_6_caracteres">Senha deve ter pelo menos 6 caracteres</string>
    <string name="usuario_nao_encontrado">Usuário não encontrado</string>
    <string name="email_nao_encontrado">E-mail não encontrado</string>
    <string name="email_enviado_verifique_sua_caixa_entrada">E-mail enviado. Verifique sua caixa de entrada.</string>
    <string name="nome_obrigatorio">Nome é obrigatório</string>
    <string name="nome_deve_ter_minimo_5_caracteres">Nome deve ter pelo menos 5 caracteres</string>
    <string name="confirmacao_senha_obrigatoria">Confirmação de senha é obrigatória</string>
    <string name="senhas_nao_coincidem">Senhas não coincidem</string>
    <string name="cadastro_realizado_com_suceso_faca_login_continuar">Cadastro realizado com sucesso. Faça login para continuar.</string>
    <string name="ocorreu_erro_tente_novamente">Ocorreu um erro, tente novamente!</string>
    <string name="email_ja_cadastrado">E-mail já cadastrado</string>
    <string name="login_realizado">Login realizado</string>
    <string name="perfil_atualizado_com_sucesso">Perfil atualizado com sucesso!</string>
    <string name="senha_atual_obrigatoria">Senha atual é obrigatória</string>
    <string name="senha_nova_obrigatoria">Senha nova é obrigatória</string>
    <string name="senhas_nao_conferem">Senhas não conferem</string>
    <string name="senha_invalida">Senhas inválida</string>
    <string name="ola">Olá!</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="trocar_senha">Trocar Senha</string>
    <string name="sobre_aplicativo">Sobre o Aplicativo</string>
    <string name="politica_privacidade">Política de Privacidade</string>
    <string name="sair_conta">Sair da Conta</string>
    <string name="email">E-mail</string>
    <string name="enviar">Enviar</string>
    <string name="nome">Nome</string>
    <string name="email_exemplo">seu.email@exemplo.com</string>
    <string name="salvar">Salvar</string>
    <string name="cidade_exemplo">Ex: Caxias do Sul</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="estado_exemplo">Ex: RS</string>
    <string name="endereco_exemplo">Ex: RS</string>
    <string name="endereco">Ex: Rua, número, complemento</string>
    <string name="telefone_exemplo">(XX) XXXXX-XXXX</string>
    <string name="telefone">Telefone</string>
    <string name="senha">Senha</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="selecione_o_tipo_de_usuario">Selecione o tipo de usuário</string>

</resources>
