<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".login.EsqueciSenhaActivity">

        <View
            android:id="@+id/components"
            style="@style/ContainerComponents"
            android:layout_width="389dp"
            android:layout_height="243dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.439" />

        <EditText
            android:id="@+id/editEmail"
            style="@style/EditText"
            android:layout_marginTop="36dp"
            android:autofillHints=""
            android:drawableEnd="@drawable/ic_email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@id/components"
            app:layout_constraintHorizontal_bias="0.465"
            app:layout_constraintStart_toStartOf="@id/components"
            app:layout_constraintTop_toTopOf="@id/components" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEnviar"
            style="@style/ButtomLogin"
            android:layout_width="306dp"
            android:layout_height="61dp"
            android:layout_marginBottom="32dp"
            android:padding="0dp"
            android:text="@string/enviar"
            app:layout_constraintBottom_toBottomOf="@+id/components"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnVoltar"
            style="@style/ButtonVoltar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/voltar"
            android:src="@drawable/image_voltar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.034"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.022" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

